# fritzbox-vpn

./: .coveragerc  .gitignore  AFFINITY_EXPORT_ANLEITUNG.md  AGENTS.md  CHANGELOG.md  LICENSE  LOGO_FORMAT_ANFORDERUNGEN.md  README.de.md  README.md  README_DE.md  README_EN.md  SECURITY_AND_BEST_PRACTICES_ANALYSIS.md  hacs.json  info.md  pyproject.toml  release_notes_0.10.4b0.md  release_notes_0.10.5b0.md  release_notes_0.10.6b0.md  release_notes_0.10.7b0.md
.github/: CODEOWNERS  ISSUE_REPLIES_beta.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/instructions/: integration.instructions.md  tests.instructions.md
docs/: ANALYSE_REPEATER_NICHT_PERSISTENT.md  FRITZ_TOOLS_VS_FRITZBOX_VPN_SSDP.md  HACS_AND_HOMEASSISTANT_COMPLIANCE.md  PR_BODY_HOME_ASSISTANT_CORE.md  REVIEW_IMPLEMENTATION.md  pypi-publish.md
fritzboxvpn/: README.md  pyproject.toml
fritzboxvpn/fritzboxvpn/: __init__.py  const.py  parsing.py  session.py
scripts/: .env.example  requirements-test.txt
tests/: conftest.py  test_auto_shadow_entity_cleanup.py  test_binary_sensor_dynamic.py  test_config_flow.py  test_config_flow_confirm.py  test_config_flow_helpers.py  test_config_flow_options.py  test_config_flow_ssdp.py  test_coordinator.py  test_coordinator_helpers.py  test_coordinator_parsing.py  test_coordinator_session.py  test_diagnostics.py  test_entities.py  test_flow_forms.py  test_init.py  test_legacy_entity_id_repair_on_setup.py  test_platform_setup.py  test_reload_no_entity_duplicates.py  test_sensor_dynamic.py  test_services.py  test_ssdp_unique_id.py
(+50 files in other folders)
