[project]
name = "fritzbox-vpn"
version = "1.0.2"
description = "Home Assistant custom integration for Fritz!Box VPN"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]
ignore = [
  "E501",
  "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SIM117"]
